fix: z-index

--- a/front-new/src/DesignSystem/Molecules/Header.scss
+++ b/front-new/src/DesignSystem/Molecules/Header.scss
@@ -5,6 +5,7 @@
   // padding: 0 $ds-app-right-and-left-padding--L;
   // width: $ds-content-size--L;
 
+  z-index: 9999;
   position: sticky;
   top: 0;
   height: 80px;
